[ECO-5553] Replaced List.of with Arrays.asList and Map.of with Collections.singletonMap